--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <button class="requestBtn">Start Request Todo</button>
-    <div id="container"></div>
+    <div id="container">
+        <div class="todos">
+            
+        </div>
+    </div>
 
     <script src="index.js"></script>
 </body>
