--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="requestBtn">Start Request Todo</button>
+    <form class="requestForm">
+        <input type="number" value="" placeholder="Number" class="requestNumber">
+        <button class="requestTodo">Start Request Todo</button>
+    </form>
+    
     <div id="container">
-        <div class="todos">
-            
-        </div>
+        <div class="todos"></div>
     </div>
 
     <script src="index.js"></script>
